--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,21 @@
 # BlueJ files
 *.ctxt
 
+# Maven target directory
+/target/
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+# IDE-specific files
+.idea/
+*.iml
+*.ipr
+*.iws
+*.log
+
+# IntelliJ
+out/
 
 # Package Files #
 *.jar
@@ -18,6 +31,22 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Spring Boot specific files
+spring-boot-starter.log
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
