--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 # IntelliJ
 out/
 
+# Tests
+*/src/test
+
 # Package Files #
 *.jar
 *.war
@@ -45,8 +48,9 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
+*/.mvn/wrapper/
+mvnw
+mvnw.cmd
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
